welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:12: error: Int does not take parameters
		recule()
                      ^